# ci

./: Cargo.toml  README.md
.github/workflows/: ci.yml
contrib/: ci-daemon.service
src/: config.rs  main.rs
src/adapter/: mod.rs  rime.rs  scan.rs
src/cli/: daemon.rs  device.rs  export.rs  import.rs  init.rs  mod.rs  scan.rs  status.rs  sync_cmd.rs
src/db/: device.rs  entry.rs  merge.rs  mod.rs  store.rs
src/ffi/: mod.rs
src/sync/: git.rs  mod.rs  trigger.rs
tests/fixtures/: sample.entries.yaml  sample.userdb.txt
